<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="8dp"
        />
    <TextView
        android:id="@+id/instructions"
        android:text="@string/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="8dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:paddingTop="8dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:padding="8dp"
            >
            <TextView
                android:id="@+id/allTimeStatisticsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statisticsHeader"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/allTimeStatistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/allTimeStatisticsHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
                app:layout_constraintTop_toBottomOf="@+id/allTimeStatistics"
                >
                <TextView
                    android:id="@+id/matchResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <LinearLayout
                    android:id="@+id/gamePanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/matchResult"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingHorizontal="64dp"
                    >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            >
                            <ImageView
                                android:id="@+id/computerActionImage"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:src="@drawable/scissors"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:contentDescription="@string/computer_action"
                                android:padding="8dp"
                                android:background="@color/colorPrimaryDark"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/computer_name"
                                android:textAlignment="center"
                                app:layout_constraintTop_toBottomOf="@id/computerActionImage"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="24sp"
                        android:fontFamily="serif"
                        android:textStyle="italic|bold"
                        android:text="@string/vs"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:gravity="center"
                        />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:id="@+id/playerActionImage"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/scissors"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:padding="8dp"
                            android:background="@color/colorPrimaryDark"
                            android:contentDescription="@string/player_action"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/player_name"
                            android:textAlignment="center"
                            app:layout_constraintTop_toBottomOf="@id/playerActionImage"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/buttonPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:showDividers="middle"
                android:divider="@drawable/empty_tall_divider"
                >
                <ImageButton
                    android:id="@+id/rockButton"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/rock"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/rock"
                    />

                <ImageButton
                    android:id="@+id/paperButton"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/paper"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/paper"
                    />

                <ImageButton
                    android:id="@+id/scissorButton"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/scissors"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/scissors"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>